# mentor-me-app

./: .replit  DEPLOYMENT.md  README.md  app.py  app_config.py  career_personality_test.py  email_service.py  index.html  mentorme_config.json  models.py  profanity_filter.py  pyproject.toml  replit.md  requirements. txt  requirements.txt  routes.py  sms_service.py  static
static/: styles.css
templates/: base.html  dashboard.html  index.html  login.html  placeholder.html  register.html
templates/templetes/templates/: login.html
